# nova

./: .gitignore  Cargo.toml  README.md  REPORT.md  lib.yml  nova.yml  release.toml
.cargo/: config.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: error.rs  main.rs
cli/src/cmd/: mod.rs  run.rs
cli/src/widgets/: board.rs  diagnostic.rs  error.rs  mod.rs
crates/ai/: Cargo.toml
crates/ai/src/: annotation.rs  artifact.rs  lib.rs
crates/ai/src/clients/: mod.rs
crates/ai/src/clients/fs/: mod.rs  repository.rs
crates/ai/src/clients/hf/: mod.rs  repository.rs
crates/ai/src/clients/http/: mod.rs  repository.rs
crates/ai/src/clients/openai/: client.rs  mod.rs  types.rs
crates/ai/src/models/: capability.rs  loaded.rs  mod.rs  remote.rs
crates/ai/src/models/bart/: attention.rs  config.rs  decoder.rs  embeddings.rs  encoder.rs  mod.rs  model.rs  summarizer.rs
crates/ai/src/models/bert/: config.rs  embedder.rs  mod.rs  model.rs  token_classifier.rs
crates/ai/src/models/distilbert/: config.rs  mod.rs  model.rs  sequence_classifier.rs
crates/ai/src/pipelines/: anchor.rs  cache.rs  mod.rs  model.rs  routines.rs
crates/ai/src/pipelines/common/: batch.rs  mod.rs
crates/ai/src/pipelines/embeddings/: config.rs  mod.rs
crates/ai/src/pipelines/generate/: mod.rs
crates/ai/src/pipelines/generation/: beam.rs  config.rs  constraints.rs  mod.rs
crates/ai/src/pipelines/keywords/: candidates.rs  config.rs  extract.rs  local.rs  mod.rs  pipeline.rs  remote.rs  stopwords.rs
crates/ai/src/pipelines/sentence_embeddings/: checkpoint.rs  config.rs  embed.rs  local.rs  mod.rs  model.rs  pipeline.rs  remote.rs
crates/ai/src/pipelines/sentiment/: checkpoint.rs  classify.rs  config.rs  local.rs  mod.rs  model.rs  pipeline.rs  remote.rs
crates/ai/src/pipelines/summarization/: checkpoint.rs  config.rs  local.rs  mod.rs  model.rs  pipeline.rs  remote.rs  summarize.rs
crates/ai/src/pipelines/summarize/: local.rs  mod.rs  model.rs
crates/ai/src/pipelines/token_classification/: aggregation.rs  checkpoint.rs  config.rs  extract.rs  local.rs  mod.rs  model.rs  pii.rs  pipeline.rs  remote.rs
crates/ai/src/resources/: asset.rs  cache.rs  device.rs  error.rs  format.rs  hub.rs  loader.rs  mod.rs  model_id.rs  provider.rs  repository.rs  resource.rs  tokenizer.rs  uri.rs
crates/ai/src/routines/: args.rs  embeddings.rs  entities.rs  input.rs  keywords.rs  mod.rs  models.rs  pii.rs  sentiment.rs  summarization.rs
crates/ai/src/tasks/: aggregation.rs  anchor.rs  bioes.rs  keybert.rs  mod.rs  scorer.rs  stopwords.rs
crates/ai/src/types/: annotation.rs  artifact.rs  entity.rs  keyword.rs  mod.rs  offset.rs  sentiment.rs  token.rs
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: args.rs  binding.rs  builtin.rs  context.rs  diagnostic.rs  engine.rs  error.rs  event.rs  function.rs  global.rs  lib.rs  manifest.rs  output.rs  routine.rs  scope.rs  template.rs
crates/core/src/args/: mod.rs
crates/core/src/bind/: function.rs  mod.rs  routine.rs
crates/core/src/builtin/: compare.rs  if_else.rs  mod.rs  not.rs
crates/core/src/event/: mod.rs  object.rs  step.rs
crates/core/src/events/: emitter.rs  event.rs  mod.rs
crates/core/src/manifest/: mod.rs  step.rs  trigger.rs
crates/core/src/object/: function.rs  mod.rs  namespace.rs  routine.rs  var.rs
crates/core/src/state/: arena.rs  entry.rs  mod.rs  scope.rs  slot.rs
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs  response.rs
crates/macros/: Cargo.toml
crates/macros/src/: args.rs  coerce.rs  diagnostics.rs  key_value.rs  lib.rs
crates/reflect/: Cargo.toml
crates/reflect/benches/: BASELINE.md  reflect_bench.rs
crates/reflect/macros/: Cargo.toml
crates/reflect/macros/src/: lib.rs  reflect_enum.rs  reflect_field.rs  reflect_generics.rs  reflect_impl.rs  reflect_meta.rs  reflect_mod.rs  reflect_struct.rs  reflect_trait.rs  reflect_visibility.rs
crates/reflect/macros/src/parse/: field.rs  meta_data.rs  mod.rs
crates/reflect/src/: box.rs  field.rs  fields.rs  get.rs  impl.rs  item.rs  layout.rs  lib.rs  meta_data.rs  method.rs  option.rs  param.rs  path.rs  result.rs  type.rs  type_id.rs  value.rs  value_of.rs  variant.rs  visibility.rs
crates/reflect/src/bound/: lifetime.rs  mod.rs  trait.rs
crates/reflect/src/compat/: json.rs  minijinja.rs  mod.rs
crates/reflect/src/dynamic/: callable.rs  dyn.rs  mod.rs  object.rs  sequence.rs
crates/reflect/src/generic/: const.rs  lifetime.rs  mod.rs  type.rs
crates/reflect/src/types/: bool.rs  enum.rs  map.rs  module.rs  mutable.rs  ref.rs  slice.rs  str.rs  struct.rs  this.rs  trait.rs  tuple.rs
crates/reflect/src/types/number/: float.rs  int.rs  mod.rs
crates/reflect/src/values/: bool.rs  map.rs  mod.rs  mutable.rs  ref.rs  slice.rs  str.rs
crates/reflect/src/values/number/: float.rs  int.rs  mod.rs
crates/reflect/tests/: json_tests.rs  map_tests.rs  minijinja_tests.rs  mod.rs  struct_tests.rs  trait_tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: builtin.rs  lib.rs  routine.rs  step.rs
crates/runtime/src/engine/: minijinja.rs  mod.rs
crates/runtime/src/state/: arena.rs  entry.rs  scope.rs  slot.rs
crates/schema/: Cargo.toml
crates/schema/src/: any.rs  array.rs  bool.rs  error.rs  integer.rs  lib.rs  null.rs  number.rs  object.rs  oneof.rs  string.rs
crates/template/: Cargo.toml
crates/template/src/: args.rs  error.rs  lib.rs  value.rs
crates/template/src/minijinja/: bridge.rs  mod.rs
crates/template/tests/: engine.rs  serde.rs
examples/batch-report/: batch.yml  format.yml
examples/build-pipeline/: pipeline.yml  report.yml
examples/http-healthcheck/: healthcheck.yml  notify.yml
examples/order-guard/: guard.yml  order.yml
routines/batch-report/: batch.yml  (+1 more)
src/: arena.rs  context.rs  error.rs  lib.rs  routine.rs  scope.rs  span.rs
tests/: ai.rs  ai_remote.rs  codec.rs  concurrency.rs  diagnostics.rs  env.rs  events.rs  fs.rs  http.rs  regressions.rs  runtime.rs  scope.rs  validate.rs  zz_probe.rs
(+11 files in other folders)
