[workspace]
resolver = "3"
members = [".", "cli", "crates/*"]
default-members = [".", "cli", "crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.docs.rs/nova"
homepage = "https://www.github.com/aacebo/nova"
repository = "https://www.github.com/aacebo/nova"

[workspace.lints.clippy]
result_large_err = "allow"
type_complexity = "allow"

[profile.dev]
incremental = false

[package]
name = "nova"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
default = ["macros"]
ai = ["dep:nova-ai"]
codec = ["dep:nova-codec"]
http = ["dep:nova-http"]
macros = ["dep:nova-macros"]

[patch.crates-io]
ort = { git = "https://github.com/pykeio/ort.git", tag = "v1.16.3" }

[dependencies]
nova-core = { path = "crates/core" }
nova-ai = { path = "crates/ai", optional = true }
nova-codec = { path = "crates/codec", optional = true }
nova-http = { path = "crates/http", optional = true }
nova-macros = { path = "crates/macros", optional = true }
