[workspace]
resolver = "3"
members = [".", "cli", "crates/*", "crates/*/macros"]
default-members = [".", "cli", "crates/*", "crates/*/macros"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.docs.rs/nova"
homepage = "https://www.github.com/aacebo/nova"
repository = "https://www.github.com/aacebo/nova"

[workspace.lints.clippy]
result_large_err = "allow"
type_complexity = "allow"

[workspace.dependencies]
nova-core = { path = "crates/core", version = "0.0.0" }
nova-ai = { path = "crates/ai", version = "0.0.0" }
nova-fs = { path = "crates/fs", version = "0.0.0" }
nova-codec = { path = "crates/codec", version = "0.0.0" }
nova-http = { path = "crates/http", version = "0.0.0" }
nova-macros = { path = "crates/macros", version = "0.0.0" }
nova-schema = { path = "crates/schema", version = "0.0.0" }
nova-reflect = { path = "crates/reflect", version = "0.0.0" }
nova-reflect-macros = { path = "crates/reflect/macros", version = "0.0.0" }

[package]
name = "nova"
description = "A YAML-driven workflow runtime with an embedded template engine"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[profile.dev]
incremental = false

# candle is unusable unoptimized: a BART summarization takes ~370s at opt-level 0 vs ~7s here.
[profile.dev.package."*"]
opt-level = 3

[lib]
doctest = false

[lints]
workspace = true

[features]
default = ["macros"]
ai = ["dep:nova-ai"]
fs = ["dep:nova-fs"]
codec = ["dep:nova-codec"]
http = ["dep:nova-http"]
macros = ["dep:nova-macros", "nova-reflect/macros"]
schema = ["dep:nova-schema"]
reflect = ["dep:nova-reflect", "nova-reflect/serde", "nova-reflect/minijinja"]
json = ["nova-reflect/json"]

[dependencies]
nova-core = { workspace = true }
nova-ai = { workspace = true, optional = true }
nova-fs = { workspace = true, optional = true }
nova-codec = { workspace = true, optional = true }
nova-http = { workspace = true, optional = true }
nova-macros = { workspace = true, optional = true }
nova-schema = { workspace = true, optional = true }
nova-reflect = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
httpmock = "0.8"
serde_json = "1"
