[package]
name = "nova-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "nova"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
nova = { path = "..", features = [] }
glob = { version = "0.3" }
clap = { version = "4.6", features = ["derive"] }
figment = { version = "0.10", features = ["yaml"] }
ratatui = { version = "0.30" }
