[package]
name = "nova-ai"
description = "AI routines (embeddings, entities, keywords, PII, sentiment, summarization) for the Nova workflow runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
nova-core = { workspace = true }

serde = { version = "1", features = ["derive", "rc"] }
ort = { version = "1.16.3", features = ["download-binaries"] }
tch = { version = "0.17" }
console = { version = "0.16" }
rust-bert = { version = "0.23", features = ["onnx", "remote"] }
