[package]
name = "nova-ai"
description = "AI routines (embeddings, entities, keywords, PII, sentiment, summarization) for the Nova workflow runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
nova-core = { workspace = true }

serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }
candle-core = { version = "0.11" }
candle-nn = { version = "0.11" }
candle-transformers = { version = "0.11" }
tokenizers = { version = "0.22" }
hf-hub = { version = "0.5" }
