[package]
name = "nova-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nova = { path = "../core", package = "nova-core" }
serde_json = "1"
serde_norway = "0.9"
