[package]
name = "nova-codec"
description = "JSON and YAML encoding routines for the Nova workflow runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nova-core = { workspace = true }
serde_json = "1"
serde_norway = "0.9"
