[package]
name = "nova-core"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
ulid = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
minijinja = { version = "2", features = ["serde"] }
crossbeam = { package = "crossbeam-channel", version = "0.5" }
reflect = { package = "nova-reflect", path = "../reflect", features = ["serde", "minijinja"] }
schema = { package = "nova-schema", path = "../schema" }
