[package]
name = "nova-fs"
description = "Filesystem routines for the Nova workflow runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nova-core = { workspace = true }
nova-reflect = { workspace = true, features = ["serde"] }
nova-template = { workspace = true }
