[package]
name = "nova-http"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nova = { path = "../core", package = "nova-core" }
