[package]
name = "nova-http"
description = "HTTP routines for the Nova workflow runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nova-core = { workspace = true }
reqwest = { version = "0.13", features = ["json", "blocking"] }
