[package]
name = "nova-reflect"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
macros = ["nova-reflect-macros"]
serde = ["dep:serde"]
minijinja = ["dep:minijinja", "serde"]
json = ["serde", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive", "rc"], optional = true }
minijinja = { version = "2", features = ["serde"], optional = true }
serde_json = { version = "1", optional = true }
nova-reflect-macros = { path = "./macros", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dhat = { version = "0.3" }
serde_json = { version = "1" }
minijinja = { version = "2", features = ["serde"] }
valuable = { version = "0.1", features = ["derive"] }
nova-reflect-macros = { path = "./macros" }

[[bench]]
name = "reflect_bench"
harness = false
