[package]
name = "nova-reflect"
description = "Runtime reflection and dynamic value model for the Nova workflow runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
macros = ["nova-reflect-macros"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
minijinja = ["serde", "dep:minijinja"]

[dependencies]
serde = { version = "1", features = ["derive", "rc"], optional = true }
serde_json = { version = "1", optional = true }
minijinja = { version = "2", features = ["serde"], optional = true }
nova-reflect-macros = { workspace = true, optional = true }

[dev-dependencies]
nova-reflect-macros = { workspace = true }

criterion = { version = "0.5", features = ["html_reports"] }
dhat = { version = "0.3" }
minijinja = { version = "2", features = ["serde"] }
serde_json = { version = "1" }
valuable = { version = "0.1", features = ["derive"] }

[[bench]]
name = "reflect_bench"
harness = false
