[package]
name = "nova-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
reflect = { package = "nova-reflect", path = "../reflect", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"], optional = true }
regex = { version = "1" }
