[package]
name = "nova-schema"
description = "Schema definition and validation for the Nova workflow runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nova-reflect = { workspace = true, features = ["serde"] }

serde = { version = "1", features = ["derive", "rc"] }
regex = { version = "1" }

[dev-dependencies]
serde_json = { version = "1" }
