[package]
name = "ayr-reflect-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = { version = "1" }
proc-macro2 = { version = "1" }
